Fixed spacing and javascript for eboard section

--- a/styles/v1.css
+++ b/styles/v1.css
@@ -418,7 +418,7 @@ hr {
 
 
 .sectiontitle{
-font-size: 1.5em;
+    font-size: 1.5em;
   color: black;
   /*font-family: PT Sans,sans-serif;*/
   /*font-family: "Times New Roman", Times, serif;*/
@@ -430,6 +430,16 @@ font-size: 1.5em;
   font-family: PT Sans,sans-serif;
   font-weight: 500;
 }
+.eboardtitle{
+    width: 100%;
+    height: 80px;
+    display: inline-block;
+    color: black;
+    font-family: "San Francisco", Helvetica, Arial, sans-serif;
+    font-size: 40px;
+    padding-top: 30px;
+    text-align: center;
+}
 .eboard {
     width: 100%;
     max-height: 200%;
@@ -438,10 +448,11 @@ font-size: 1.5em;
     flex-wrap: wrap;
     margin-top: 30px;
     font-family: "San Francisco", Helvetica, Arial, sans-serif;
-    padding-left: 0px;
-    margin-left: 0px;
+  
     align-content: center;
     text-align: center;
+    max-width: 1440px;
+    padding-left: 10%;
 }
 .gallery1 {
     width: 200px;
@@ -456,14 +467,19 @@ font-size: 1.5em;
 
 .gallery {
     width: 200px;
-    padding-right: 30px;
+    padding-right: 0px;
     margin-bottom: 20px;
     border: 1px solid snow;
     text-align: center;
     font-size: 20px;
-    height: 252px;
+    height: 280px;
     padding-bottom: 10px;
 }
+.galleryspace {
+    width: 20px;
+    height: 200px;
+}
+
 .gallery:hover {
     cursor: pointer;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -471,6 +487,7 @@ font-size: 1.5em;
 .gallery img {
     width: 100%;
     height: auto;
+    max-height: 220px;
 }
 .desc1 {
     width: 100%;
